force-app/main/default/objects/Activity/fields/aircall__Aircall_AI__c.field-meta.xml
<CustomField>
    <fullName>aircall__Aircall_AI__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aircall Log</label>
    <referenceTo>aircall__Aircall_AI__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>