force-app/main/default/objects/Activity/fields/aircall__Call_Recording__c.field-meta.xml
<CustomField>
    <fullName>aircall__Call_Recording__c</fullName>
    <description>Aircall call recording</description>
    <label>Call Recording</label>
    <type>Url</type>
</CustomField>