force-app/main/default/objects/Activity/fields/aircall__Detailed_call_type__c.field-meta.xml
<CustomField>
    <fullName>aircall__Detailed_call_type__c</fullName>
    <label>Detailed call type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inbound answered</fullName>
            </value>
            <value>
                <fullName>Missed call</fullName>
            </value>
            <value>
                <fullName>Outbound answered</fullName>
            </value>
            <value>
                <fullName>Outbound unanswered</fullName>
            </value>
            <value>
                <fullName>Voicemail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>