force-app/main/default/objects/Activity/fields/aircall__External_contacts_phone_number__c.field-meta.xml
<CustomField>
    <fullName>aircall__External_contacts_phone_number__c</fullName>
    <label>External contact phone number</label>
    <type>Phone</type>
</CustomField>