force-app/main/default/objects/Activity/fields/aircall__Has_connected__c.field-meta.xml
<CustomField>
    <fullName>aircall__Has_connected__c</fullName>
    <formula>IF( AND(OR(ISPICKVAL(CallType, &apos;Inbound&apos;),IF(ISPICKVAL(CallType, &apos;Outbound&apos;),IF(CONTAINS(LOWER(Subject),&apos;un-answered&apos;),false,true ),false)),!aircall__Is_Missed_call__c,!aircall__Is_Voicemail__c) , true, false)</formula>
    <label>Has connected</label>
    <type>Checkbox</type>
</CustomField>