force-app/main/default/objects/Activity/fields/aircall__Is_Voicemail__c.field-meta.xml
<CustomField>
    <fullName>aircall__Is_Voicemail__c</fullName>
    <formula>BEGINS(LOWER(Subject),&apos;voicemail&apos;)</formula>
    <label>Is Voicemail</label>
    <type>Checkbox</type>
</CustomField>