force-app/main/default/objects/Activity/fields/aircall__Missed_Call_Reason__c.field-meta.xml
<CustomField>
    <fullName>aircall__Missed_Call_Reason__c</fullName>
    <label>Missed Call Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>abandoned_in_ivr</fullName>
                <label>Abandoned in IVR</label>
            </value>
            <value>
                <fullName>agents_did_not_answer</fullName>
                <label>Agents did not answer</label>
            </value>
            <value>
                <fullName>no_available_agent</fullName>
                <label>No available agent</label>
            </value>
            <value>
                <fullName>out_of_opening_hours</fullName>
                <label>Out of opening hours</label>
            </value>
            <value>
                <fullName>short_abandoned</fullName>
                <label>Short abandoned</label>
            </value>
            <value>
                <fullName>abandoned_in_classic</fullName>
                <label>Abandoned in Classic</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>