force-app/main/default/objects/Activity/fields/aircall__SMS_Sent_To__c.field-meta.xml
<CustomField>
    <fullName>aircall__SMS_Sent_To__c</fullName>
    <label>SMS Sent To</label>
    <type>Phone</type>
</CustomField>