force-app/main/default/objects/Activity/fields/aircall__SMS_Status__c.field-meta.xml
<CustomField>
    <fullName>aircall__SMS_Status__c</fullName>
    <label>SMS Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delivered</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Undelivered</fullName>
                <label>Not Sent</label>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>