force-app/main/default/objects/Activity/fields/bergeordneterAccountFormel__c.field-meta.xml
<CustomField>
    <fullName>bergeordneterAccountFormel__c</fullName>
    <formula>IF(!IsBlank(Account.Name), Account.Parent.Name, &apos;Leer&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Übergeordneter Account Formel</label>
    <type>Text</type>
</CustomField>