force-app/main/default/objects/Activity/fields/Calendly__IsRescheduled__c.field-meta.xml
<CustomField>
    <fullName>Calendly__IsRescheduled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Rescheduled</label>
    <type>Checkbox</type>
</CustomField>