force-app/main/default/objects/Activity/fields/DescriptionVp__c.field-meta.xml
<CustomField>
    <fullName>DescriptionVp__c</fullName>
    <description>Description to show in Vertriebsportal</description>
    <inlineHelpText>Beschreibung eingeben, welche im Vertriebsportal angezeigt werden soll</inlineHelpText>
    <label>Description Vertriebsportal</label>
    <type>TextArea</type>
</CustomField>