force-app/main/default/objects/Activity/fields/EmailWhenTaskIsDone__c.field-meta.xml
<CustomField>
    <fullName>EmailWhenTaskIsDone__c</fullName>
    <defaultValue>true</defaultValue>
    <label>E-Mail wenn Aufgabe abgeschlossen</label>
    <type>Checkbox</type>
</CustomField>