force-app/main/default/objects/Activity/fields/Erstellzeit__c.field-meta.xml
<CustomField>
    <fullName>Erstellzeit__c</fullName>
    <formula>LEFT(TEXT(TIMEVALUE(CreatedDate)), 5) + &apos; Uhr&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Erstellzeit</label>
    <type>Text</type>
</CustomField>