force-app/main/default/objects/Activity/fields/ShowInVp__c.field-meta.xml
<CustomField>
    <fullName>ShowInVp__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True, if event should be shown in Vertriebsportal</description>
    <inlineHelpText>Aktiviert = wird im Vertriebsportal angezeigt</inlineHelpText>
    <label>Show in Vertriebsportal</label>
    <type>Checkbox</type>
</CustomField>