force-app/main/default/objects/Activity/fields/SubjectVp__c.field-meta.xml
<CustomField>
    <fullName>SubjectVp__c</fullName>
    <description>Subject to show in Vertriebsportal</description>
    <inlineHelpText>Thema eingeben, welches im Vertriebsportal angezeigt werden soll</inlineHelpText>
    <label>Subject Vertriebsportal</label>
    <length>80</length>
    <type>Text</type>
</CustomField>