force-app/main/default/objects/Activity/fields/zoom_app__Additional_Emails__c.field-meta.xml
<CustomField>
    <fullName>zoom_app__Additional_Emails__c</fullName>
    <inlineHelpText>Enter email addresses of all other participants separated by a comma [,].</inlineHelpText>
    <label>Enter Email Address of Attendees</label>
    <type>TextArea</type>
</CustomField>