force-app/main/default/objects/Activity/fields/zoom_app__Zoom_Call_Log__c.field-meta.xml
<CustomField>
    <fullName>zoom_app__Zoom_Call_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Zoom Call Log</label>
    <referenceTo>zoom_app__Zoom_Call_Log__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>