force-app/main/default/objects/Activity/fields/zoom_app__Zoom_Event__c.field-meta.xml
<CustomField>
    <fullName>zoom_app__Zoom_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Zoom Event</label>
    <referenceTo>zoom_app__Zoom_Event__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>