force-app/main/default/objects/Activity/listViews/MyActivities.listView-meta.xml
<ListView>
    <fullName>MyActivities</fullName>
    <filterScope>Mine</filterScope>
    <filters>
        <field>TASK.STATUS</field>
        <operation>equals</operation>
        <value>Nicht begonnen,Läuft</value>
    </filters>
    <label>Meine Aktivitäten</label>
    <language>de</language>
</ListView>