force-app/main/default/objects/Activity/listViews/MyDelegatedActivities.listView-meta.xml
<ListView>
    <fullName>MyDelegatedActivities</fullName>
    <filterScope>Delegated</filterScope>
    <filters>
        <field>TASK.STATUS</field>
        <operation>notEqual</operation>
        <value>Abgeschlossen</value>
    </filters>
    <label>Meine delegierten Aktivitäten</label>
    <language>de</language>
</ListView>